<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.play.PlayerActivity">


    <RelativeLayout
        android:id="@+id/rllt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false">

        <VideoView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/player_bottom_background"
        android:visibility="gone">

        <TextView
            android:id="@+id/play_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/black55"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <SeekBar
                android:id="@+id/music_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/seekbar_bg"
                android:thumb="@mipmap/bottom_thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_time"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/play_time"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/btn_ctrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_yd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:nextFocusLeft="@id/btn_tyt"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/yd"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_replay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/replay"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_dgt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/dgt"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/pause"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_yc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/yc"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/btn_tyt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/play_bottom_btn"
                        android:button="@null"
                        android:gravity="center"
                        android:nextFocusRight="@id/btn_yd"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/tyt"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </RelativeLayout>
            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ad_left"
            android:layout_width="142dp"
            android:layout_height="322dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/ad_right"
            android:layout_width="142dp"
            android:layout_height="322dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/ad_top"
            android:layout_width="322dp"
            android:layout_height="142dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/ad_bottom"
            android:layout_width="322dp"
            android:layout_height="142dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>
</FrameLayout>